--- a/app/views/personal-information.html
+++ b/app/views/personal-information.html
@@ -37,7 +37,7 @@
             </li>
             <li class="boy" ng-click="choiceGender(sex.boy)"><a>{{sex.boy}}</a></li>
             <li class="girl" ng-click="choiceGender(sex.girl)"><a>{{sex.girl}}</a></li>
-            <li class="cancel" ng-click="genderNoSelect()">
+            <li class="cancel" ng-click="getCancel()">
                 <a>取消</a>
             </li>
         </ul>
