--- a/app/views/personal-center.html
+++ b/app/views/personal-center.html
@@ -35,6 +35,22 @@
                     </div>
                 </div>
                 <a href="" class="operate-box" ng-click="editArticle()">编辑</a>
+                <!--收藏浮层s-->
+                <div class="gender-popmenu" ng-if="gender.touched" ng-click="genderNoSelect()">
+                </div>
+                <div class="gender-select" ng-if="gender.touched">
+                    <ul>
+                        <li>
+                            <a>编辑</a>
+                        </li>
+                        <li class="boy" ng-click="starArticle()"><a>收藏</a></li>
+                        <li class="girl" ng-click="choiceGender(sex.girl)"><a>屏蔽</a></li>
+                        <li class="cancel" ng-click="getCancel()">
+                            <a>取消</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--收藏浮层e-->
             </header>
             <div class="top-img">
                 <a href="/#!/articles/{{listview._id}}"><img ng-src="{{listview.src}}" alt=""></a>
