--- a/app/css/personal.css
+++ b/app/css/personal.css
@@ -112,8 +112,7 @@
     color: #999;
 }
 
-.profileDetail .gender-select,
-.box-content .gender-select {
+.profileDetail .gender-select {
     position: fixed;
     bottom: 5px;
     left: 0;
@@ -124,18 +123,13 @@
     background-color: #b4b4b4;
 }
 
-.profileDetail .gender-popmenu,
-.box-content .gender-popmenu {
+.profileDetail .gender-popmenu {
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.498039);
-}
-
-.box-content .gender-popmenu {
-    opacity: .3;
 }
 
 @keyframes transformPopmenu {
@@ -180,13 +174,11 @@
     }
 }
 
-.profileDetail .gender-popmenu.ng-enter,
-.box-content .gender-popmenu.ng-enter {
+.profileDetail .gender-popmenu.ng-enter {
     animation: transformPopmenu .4s both ease;
 }
 
-.profileDetail .gender-select.ng-enter,
-.box-content .gender-select.ng-enter {
+.profileDetail .gender-select.ng-enter {
     animation: slideUpPopmenu .4s both ease;
 }
 
