--- a/app/views/main-list.html
+++ b/app/views/main-list.html
@@ -12,17 +12,17 @@
                     <span>{{listview.publishDate | date:'MM/dd/yyyy'}}</span><span>来自微社客户端</span>
                 </div>
             </div>
-            <a href="" class="operate-box" ng-click="editArticle()">编辑</a>
+            <a href="" class="operate-box" ng-click="editArticle(listview)">编辑</a>
             <!--收藏浮层s-->
-            <div class="gender-popmenu" ng-if="gender.touched" ng-click="genderNoSelect()">
+            <div class="edit-popmenu" ng-if="edit.touched" ng-click="editNoSelect()">
             </div>
-            <div class="gender-select" ng-if="gender.touched">
+            <div class="edit-select" ng-if="edit.touched">
                 <ul>
                     <li>
                         <a>编辑</a>
                     </li>
-                    <li class="boy" ng-click="starArticle()"><a>收藏</a></li>
-                    <li class="girl" ng-click="deleteArticle(listview.author._id)"><a>屏蔽</a></li>
+                    <li class="star" ng-click="starArticle()"><a>收藏</a></li>
+                    <li class="delete" ng-click="deleteArticle()"><a>屏蔽</a></li>
                     <li class="cancel" ng-click="getCancel()">
                         <a>取消</a>
                     </li>
