--- a/app/views/main-list.html
+++ b/app/views/main-list.html
@@ -14,8 +14,8 @@
             </div>
             <a href="" class="operate-box" ng-click="editArticle(listview)">编辑</a>
             <!--收藏浮层s-->
-            <div class="edit-popmenu" ng-if="edit.touched" ng-click="editNoSelect()">
-            </div>
+            <!--<div class="edit-popmenu" ng-if="edit.touched" ng-click="editNoSelect()">
+            </div>-->
             <div class="edit-select" ng-if="edit.touched">
                 <ul>
                     <li>
