--- a/app/css/main.css
+++ b/app/css/main.css
@@ -127,6 +127,10 @@ header nav .spread-left {
     height: 25px;
 }
 
+.srcoll-container {
+    -webkit-overflow-scrolling: touch;
+}
+
 .box-content {
     margin: 10px 0;
     padding: 10px 10px;
